--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/TheNateCardoso/clore_disneyplus#readme",
   "description": "",
   "devDependencies": {
+    "grunt-contrib-copy": "^1.0.0",
     "gulp": "^4.0.2",
     "gulp-imagemin": "^7.1.0",
     "gulp-sass": "^6.0.1",
