--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
   "devDependencies": {
     "grunt-contrib-copy": "^1.0.0",
     "gulp": "^4.0.2",
+    "gulp-clean-css": "^4.3.0",
     "gulp-imagemin": "^7.1.0",
     "gulp-sass": "^6.0.1",
+    "gulp-uglify": "^3.0.2",
     "sass": "^1.89.1"
   }
 }
